Mon Mar 23 06:51:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* enc/depend (link_so): replaces $(TARGET) with basename of the
	  target.  [ruby-talk:330286]

Wed Mar 18 02:41:33 2009  Masatoshi SEKI  <m_seki@mva.biglobe.ne.jp>

	* lib/drb/drb.rb (open_server_inaddr_any): fixed multiple network
	  families problem. a patch from Charl Matthee at [ruby-core:21033].

Tue Mar 17 21:42:54 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* tool/make-snapshot (package): creates .revision.time and passes
	  CHDIR to create prerequisite files.

Tue Mar 17 18:00:55 2009  Akinori MUSHA  <knu@iDaemons.org>

	* enumerator.c (Enumerator#{each_,}{with_index,with_object}): Fix
	  a bug where any parameter but the first one is dropped even if
	  multiple values are yielded with. [Bug #1198]

Tue Mar 17 14:25:16 2009  Tanaka Akira  <akr@fsij.org>

	* lib/pathname.rb (Pathname#sub): set $~ in block.binding.
	  [ruby-dev:38173]

Sun Mar 15 02:09:31 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (bmcall): should not uninitialized variable.  a patch from
	  pegacorn at [ruby-dev:38169].

Sat Mar 14 18:18:08 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* proc.c (rb_proc_call, rb_node_arity, bmcall, curry): checks
	  overflow.

	* proc.c (rb_proc_parameters): unnamed_parameters() expects in
	  not VALUE.

Fri Mar 13 09:17:12 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* lib/fileutils.rb (FileUtils#fu_get_gid): stringify group
	  argument before making regexp match.  [ruby-dev:38155]

Fri Mar 13 15:10:43 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/openssl/ossl_x509ext.c (ossl_x509ext_set_value): should use
	  OPENSSL_free instead of free.  a patch from Charlie Savage a
	  [ruby-core:22858].

Fri Mar 13 08:06:48 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* util.c (rv_strdup): macro to duplicate nul-terminated string.
	  [ruby-core:22852]

Thu Mar 12 22:14:01 2009  Tanaka Akira  <akr@fsij.org>

	* ext/openssl/ossl_ssl.c (ossl_ssl_def_const): use INT2NUM because