@@ -1,3 +1,11 @@
+Mon Mar 23 21:41:14 2009  Akinori MUSHA  <knu@iDaemons.org>
+
+	* ext/dbm/dbm.c (fdbm_initialize): Make the file variable
+	  volatile, because FilePathValue() currently does not protect the
+	  given variable from GC. (Probably it should)
+
+	* ext/sdbm/init.c (fsdbm_initialize): Ditto.
+
 Mon Mar 23 06:51:16 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
 
 	* enc/depend (link_so): replaces $(TARGET) with basename of the
